[gd_scene load_steps=6 format=2]

[ext_resource path="res://3-Tiles/objeto.png" type="Texture" id=1]
[ext_resource path="res://2-Scripts/salida.gd" type="Script" id=2]
[ext_resource path="res://5-FX/shaker.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 160 )

[node name="Salida" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AreaSalida" type="Area2D" parent="."]

[node name="ColisionSalida" type="CollisionShape2D" parent="AreaSalida"]
shape = SubResource( 1 )

[node name="AreaAudio" type="Area2D" parent="."]

[node name="ColisionAudio" type="CollisionShape2D" parent="AreaAudio"]
shape = SubResource( 2 )

[node name="AudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.25

[connection signal="area_entered" from="AreaSalida" to="." method="_on_ExitArea_entered"]
[connection signal="area_entered" from="AreaAudio" to="." method="_on_AudioArea_entered"]
[connection signal="area_exited" from="AreaAudio" to="." method="_on_AudioArea_exited"]
